--- a/index.html
+++ b/index.html
@@ -51,3 +51,31 @@
                     </div>
                     
                 </div>
+                \ <div class="boyRight">
+                    <img src="images/boy.png" alt="">
+                </div>
+            </div>
+        </header>
+        <div class="secondBody">
+            <div class="secondBodyInner">
+                <div class="secondBodyInnerTwo">
+                    <div class="ourPopularCls">
+                        <h5 class="onlineCls">Practice Advice</h5>
+                        <h2>Our Popular Courses</h2>
+                        <p>Problems trying to resolve the conflict between </br>
+                            the two major realms of Classical physics: Newtonian mechanics </p>
+                    </div>                    
+                </div>
+                <div class="cardsCls">
+                    <div class="card">
+                        <img src="images/icons/monitor-icon.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">training Courses</h5>
+                          <div class="rectangle"></div>
+                          <p class="card-text">The gradual 
+                            accumulation of 
+                            information about </p>
+
+                          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        </div>
+                      </div>
