--- a/index.html
+++ b/index.html
@@ -79,3 +79,112 @@
                           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                       </div>
+                      <div class="card">
+                        <img src="images/icons/telescope-icon.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">training Courses</h5>
+                          <div class="rectangle"></div>
+                          <p class="card-text">The gradual 
+                            accumulation of 
+                            information about </p>
+                          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        </div>
+                      </div>
+                      <div class="card thirdCardCls">
+                        <img src="images/icons/funel-icon.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">training Courses</h5>
+                          <div class="rectangle"></div>
+                          <p class="card-text">The gradual 
+                            accumulation of 
+                            information about </p>
+                          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        </div>
+                      </div>
+                      <div class="card">
+                        <img src="images/icons/pencil-icon.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Expert instruction</h5>
+                          <div class="rectangle"></div>
+                          <p class="card-text">The gradual 
+                            accumulation of 
+                            information about </p>
+                          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        </div>
+                      </div>                      
+                </div>               
+            </div>
+        </div>
+        <div class="thirdBody">
+            <div class="thirdBodyInner">
+                <div class="thirdBodyInnerTwo">
+                    <div class="GqLeft">
+                        <img src="images/col-md-6.png" alt="">
+                    </div>
+                    <div class="GqRight">
+                        <div class="GqRightInner">
+                            <div class="rectangleGetQuality"></div>
+                            <div class="getQuality">
+                                <h2>Get Quality Education</h2>
+                            </div>
+                            <p>Problems trying to resolve the conflict between <br>
+                                the two major realms of Classical physics: <br>
+                                Newtonian mechanics </p>
+                                <div class="learnMoreThird">Learn More ></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>      
+        </div>
+        <div class="thirdBody">
+            <div class="thirdBodyInner">
+                <div class="thirdBodyInnerTwo">
+                    <div class="GqRight">
+                        <div class="GqRightInner">
+                            <div class="rectangleGetQuality"></div>
+                            <div class="getQuality" style="width: auto;">
+                                <h2>Approdable Packages</h2>
+                            </div>
+                            <p>Problems trying to resolve the conflict between <br>
+                                the two major realms of Classical physics: <br>
+                                Newtonian mechanics </p>
+                                <div class="learnMoreThird">Learn More ></div>
+                        </div>
+                    </div>
+                    <div class="GqLeft">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/LwNgY4VjER0?si=V4XSLa5BG513edXt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>                  
+                </div>
+            </div>      
+        </div>
+        <div class="fifthBody">
+            <div class="fifthBodyInner">
+                <div class="fifthBodyInnerTwo">
+                    <div class="ourPopularCls" style="height: 120px; margin-bottom: 70px; margin-top: 0px;">
+                        <h5 class="onlineCls">Courses</h5>
+                        <h2>Most Popular Courses</h2>
+                        <p>Problems trying to resolve the conflict between </br>
+                            the two major realms of Classical physics: Newtonian mechanics </p>
+                    </div>
+                    <div  class="fifthBodyInnerThree">
+                        <div class="mainCards">
+                            <div class="mainCardTop">
+                                <img src="images/trangle.png" alt="">
+                            </div>
+                            <div class="mainCardBotom">
+                                <div class="mainCardBotomInner">
+                                    <div class="trainingCls">
+                                        training Courses <span class="starCls"><img src="images/icons/star.png" alt=""> 4.9</span>
+                                    </div>
+                                    <h5>Video in Live Action</h5>
+                                    <p>We focus on ergonomics <br>
+                                        and meeting you....</p>
+                                        <div class="salesCls"><img src="images/icons/sales.png" alt=""></div>
+                                        <div class="priceCls"><img src="images/icons/prices.png" alt=""></div>
+                                        <div class="LmoreCls"><img src="images/icons/learnMore.png" alt=""></div>
+                                </div>
+                                
+
+                            </div>
+                        </div>
