--- a/index.html
+++ b/index.html
@@ -188,3 +188,39 @@
 
                             </div>
                         </div>
+                        <div class="mainCards">
+                            <div class="mainCardTop">
+                                <img src="images/Cart_Penciles.png" alt="">
+                            </div>
+                            <div class="mainCardBotom">
+                                <div class="mainCardBotomInner">
+                                    <div class="trainingCls">
+                                        training Courses <span class="starCls"><img src="images/icons/star.png" alt=""> 4.9</span>
+                                    </div>
+                                    <h5>Video in Live Action</h5>
+                                    <p>We focus on ergonomics <br>
+                                        and meeting you....</p>
+                                        <div class="salesCls"><img src="images/icons/sales.png" alt=""></div>
+                                        <div class="priceCls"><img src="images/icons/prices.png" alt=""></div>
+                                        <div class="LmoreCls"><img src="images/icons/learnMore.png" alt=""></div>
+                                </div>                             
+                            </div>
+                        </div>
+                        <div class="mainCards">
+                            <div class="mainCardTop">
+                                <img src="images/yellow.png" alt="">
+                            </div>
+                            <div class="mainCardBotom">
+                                <div class="mainCardBotomInner">
+                                    <div class="trainingCls">
+                                        training Courses <span class="starCls"><img src="images/icons/star.png" alt=""> 4.9</span>
+                                    </div>
+                                    <h5>Video in Live Action</h5>
+                                    <p>We focus on ergonomics <br>
+                                        and meeting you....</p>
+                                        <div class="salesCls"><img src="images/icons/sales.png" alt=""></div>
+                                        <div class="priceCls"><img src="images/icons/prices.png" alt=""></div>
+                                        <div class="LmoreCls"><img src="images/icons/learnMore.png" alt=""></div>
+                                </div>                               
+                            </div>
+                        </div>
