expert techer section

--- a/index.html
+++ b/index.html
@@ -224,3 +224,71 @@
                                 </div>                               
                             </div>
                         </div>
+                        <div class="mainCards">
+                            <div class="mainCardTop">
+                                <img src="images/cart_pencil_2.png" alt="">
+                            </div>
+                            <div class="mainCardBotom">
+                                <div class="mainCardBotomInner">
+                                    <div class="trainingCls">
+                                        training Courses <span class="starCls"><img src="images/icons/star.png" alt=""> 4.9</span>
+                                    </div>
+                                    <h5>Video in Live Action</h5>
+                                    <p>We focus on ergonomics <br>
+                                        and meeting you....</p>
+                                        <div class="salesCls"><img src="images/icons/sales.png" alt=""></div>
+                                        <div class="priceCls"><img src="images/icons/prices.png" alt=""></div>
+                                        <div class="LmoreCls"><img src="images/icons/learnMore.png" alt=""></div>
+                                </div>                               
+                            </div>
+                        </div>
+                    </div>                   
+                </div>
+            </div>
+
+        </div>
+        <!-- Expert Teachers Section Starts Here -->
+
+        <section class="pricing">
+            <h1>Our Experts Teacher</h1>
+            <p>Problems trying to resolve the conflict between the two major names of Classical physics: Newtonian mechanics</p>
+    
+            <div class="pricing-tables">
+                <!-- Pricing card 1 -->
+                <div class="pricing-card">
+                    <div class="price-header">
+                        <h2>Free</h2>
+                        <p>Organize access to all apps by hand</p>
+                        <div class="price">
+                            <span>19$</span> <small>Per Month</small>
+                        </div>
+                    </div>
+                    <div class="features">
+                        <p><span>&#10004;</span> Unlimited product updates</p>
+                        <p><span>&#10004;</span> ICS cloud storage</p>
+                        <p><span>&#10004;</span> Email and community support</p>
+                    </div>
+                    <div class="cta">
+                        <a href="#" class="cta-btn">Try for free</a>
+                    </div>
+                </div>
+    
+                <!-- Pricing card 2 -->
+                <div class="pricing-card featured">
+                    <div class="price-header">
+                        <h2>Free</h2>
+                        <p>Organize access to all apps by hand</p>
+                        <div class="price">
+                            <span>19$</span> <small>Per Month</small>
+                        </div>
+                        <div class="new-badge">New</div>
+                    </div>
+                    <div class="features">
+                        <p><span>&#10004;</span> Unlimited product updates</p>
+                        <p><span>&#10004;</span> ICS cloud storage</p>
+                        <p><span>&#10004;</span> Email and community support</p>
+                    </div>
+                    <div class="cta">
+                        <a href="#" class="cta-btn">Try for free</a>
+                    </div>
+                </div>
